test/misc/tab.delta.output
tab.delta:5:10: error: unknown identifier 'b'
	var a = b;
	        ^
