test/misc/tab.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:10: error: unknown identifier 'b'
	var a = b;
}
